--- a/css/styles.css
+++ b/css/styles.css
@@ -4,4 +4,66 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #444;
+}
+
+.content-wrapper {
+  max-width: 1250px;
+  margin: 0 auto;
+  background-color: #f6f6ff;
+  height: 100vh;
+}
+
+.nav-bar {
+  background-color: #192e4a;
+  color: #f6f6ff;
+  height: 95px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-logo {
+  margin-bottom: 15px;
+}
+
+.m-logo {
+  color: #f6f6ff;
+  border: 1px solid #f6f6ff;
+  padding: 10px;
+  border-radius: 50%;
+}
+
+.nav-menu {
+  list-style: none;
+  display: flex;
+}
+
+.nav-links {
+  color: #f6f6ff;
+  text-decoration: none;
+}
+
+.li-item + .li-item {
+  margin-left: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-bar {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 20px;
+  }
+
+  .nav-links {
+    font-size: 1.4rem;
+  }
+
+  .m-logo {
+    font-size: 1.6rem;
+  }
+}
+
 /*# sourceMappingURL=styles.css.map */
