--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,70 @@
+$nav-bg: #192e4a;
+$primary-white: #f6f6ff;
+
 * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+}
+
+body {
+   background-color: #444;
+}
+
+.content-wrapper {
+   max-width: 1250px;
+   margin: 0 auto;
+   background-color: $primary-white;
+   height: 100vh;
+}
+
+.nav-bar {
+   background-color: $nav-bg;
+   color: $primary-white;
+   height: 95px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+}
+
+.nav-logo {
+   margin-bottom: 15px;
+}
+
+.m-logo {
+   color: $primary-white;
+   border: 1px solid $primary-white;
+   padding: 10px;
+   border-radius: 50%;
+}
+
+.nav-menu {
+   list-style: none;
+   display: flex;
+}
+
+.nav-links {
+   color: $primary-white;
+   text-decoration: none;
+}
+
+.li-item + .li-item {
+   margin-left: 20px;
+}
+
+@media screen and (min-width: 768px) {
+   .nav-bar {
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 0 20px;
+   }
+
+   .nav-links {
+      font-size: 1.4rem;
+   }
+
+   .m-logo {
+      font-size: 1.6rem;
+   }
 }
