Nav, logo name, hero section all in and responsive

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Prata&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Pinyon+Script&display=swap");
+
 $nav-bg: #192e4a;
 $primary-white: #f6f6ff;
 
@@ -16,6 +19,10 @@ body {
    margin: 0 auto;
    background-color: $primary-white;
    height: 100vh;
+}
+
+.main-header {
+   //  border: 2px solid red;
 }
 
 .nav-bar {
@@ -53,6 +60,62 @@ body {
    margin-left: 20px;
 }
 
+.marko-title-container {
+   width: 100%;
+   height: 130px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   //  border: 2px solid red;
+}
+
+.marko-logo {
+   //  display: flex;
+   //  justify-content: center;
+   //  align-items: center;
+}
+
+.marko-logo img {
+   height: 60px;
+   margin-top: 20px;
+   //  margin: 0 auto;
+   //  border: 2px solid red;
+}
+
+.nick-name {
+   text-align: center;
+   margin: 15px 0;
+}
+
+.hero {
+   height: 268px;
+   width: 100%;
+   background: no-repeat 90% 50% / cover url("/images/hero.png");
+   color: #fffff9;
+   position: relative;
+}
+
+.portfolio-text {
+   font-family: "Prata", serif;
+   font-size: 1.1rem;
+   position: absolute;
+   bottom: 60px;
+   right: 50%;
+}
+
+.name {
+   font-family: "Pinyon Script", cursive;
+   position: absolute;
+   bottom: 20px;
+   right: 28%;
+   font-size: 1.8rem;
+   letter-spacing: 1.21px;
+}
+
+// ====================================================
+//                   MEDIA QUERIES
+// ====================================================
+
 @media screen and (min-width: 768px) {
    .nav-bar {
       flex-direction: row;
@@ -66,5 +129,29 @@ body {
 
    .m-logo {
       font-size: 1.6rem;
+   }
+
+   .marko-title-container {
+      height: 160px;
+   }
+
+   .marko-logo img {
+      height: 70px;
+   }
+
+   .nick-name {
+      font-size: 1.2rem;
+   }
+
+   .name {
+      bottom: 40px;
+      right: 30%;
+      font-size: 3rem;
+   }
+
+   .portfolio-text {
+      bottom: 120px;
+      right: 50%;
+      font-size: 1.8rem;
    }
 }
