--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Prata&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Pinyon+Script&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -50,6 +52,49 @@ body {
   margin-left: 20px;
 }
 
+.marko-title-container {
+  width: 100%;
+  height: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.marko-logo img {
+  height: 60px;
+  margin-top: 20px;
+}
+
+.nick-name {
+  text-align: center;
+  margin: 15px 0;
+}
+
+.hero {
+  height: 268px;
+  width: 100%;
+  background: no-repeat 90% 50%/cover url("/images/hero.png");
+  color: #fffff9;
+  position: relative;
+}
+
+.portfolio-text {
+  font-family: "Prata", serif;
+  font-size: 1.1rem;
+  position: absolute;
+  bottom: 60px;
+  right: 50%;
+}
+
+.name {
+  font-family: "Pinyon Script", cursive;
+  position: absolute;
+  bottom: 20px;
+  right: 28%;
+  font-size: 1.8rem;
+  letter-spacing: 1.21px;
+}
+
 @media screen and (min-width: 768px) {
   .nav-bar {
     flex-direction: row;
@@ -63,6 +108,30 @@ body {
 
   .m-logo {
     font-size: 1.6rem;
+  }
+
+  .marko-title-container {
+    height: 160px;
+  }
+
+  .marko-logo img {
+    height: 70px;
+  }
+
+  .nick-name {
+    font-size: 1.2rem;
+  }
+
+  .name {
+    bottom: 40px;
+    right: 30%;
+    font-size: 3rem;
+  }
+
+  .portfolio-text {
+    bottom: 120px;
+    right: 50%;
+    font-size: 1.8rem;
   }
 }
 
