--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,8 @@ body {
 }
 
 .nick-name {
+  font-family: "Pinyon Script", cursive;
+  font-size: 1.2rem;
   text-align: center;
   margin: 15px 0;
 }
@@ -119,7 +121,7 @@ body {
   }
 
   .nick-name {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
   }
 
   .name {
