--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -83,6 +83,8 @@ body {
 }
 
 .nick-name {
+   font-family: "Pinyon Script", cursive;
+   font-size: 1.2rem;
    text-align: center;
    margin: 15px 0;
 }
@@ -140,7 +142,7 @@ body {
    }
 
    .nick-name {
-      font-size: 1.2rem;
+      font-size: 1.4rem;
    }
 
    .name {
