--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -173,7 +173,7 @@ html {
       height: 55px;
       width: 100%;
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
       align-items: center;
       color: $primary-white;
       background-color: $nav-bg;
