--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Prata&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Pinyon+Script&display=swap");
 * {
@@ -353,7 +352,7 @@ html {
   margin-bottom: 5px;
 }
 
-≈ footer {
+footer {
   width: 100%;
   height: 75px;
   margin-top: 25px;
